--- a/prj.conf
+++ b/prj.conf
@@ -7,3 +7,5 @@ CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_FILE_SYSTEM=y
 CONFIG_FILE_SYSTEM_LITTLEFS=y
+CONFIG_DEBUG_OPTIMIZATIONS=n
+CONFIG_DEBUG_INFO=y
